[gd_scene load_steps=6 format=3 uid="uid://cmnaccsuhfe5a"]

[ext_resource type="Script" path="res://PowerUps/power_card.gd" id="1_cyxka"]
[ext_resource type="Texture2D" uid="uid://crw61fsyp8dn7" path="res://PowerUps/PowerCard.png" id="1_kqtxi"]
[ext_resource type="LabelSettings" uid="uid://bo6ktj5p24gub" path="res://Card.tres" id="2_wx6d4"]
[ext_resource type="Texture2D" uid="uid://d1xsllexsnblo" path="res://defaulticon.svg" id="3_6gfsj"]
[ext_resource type="LabelSettings" uid="uid://bl7q3ico58058" path="res://Card_Desc.tres" id="4_jpf3m"]

[node name="PowerCard" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 100)
script = ExtResource("1_cyxka")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kqtxi")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 15.0
offset_right = 65.0
offset_bottom = 65.0
grow_horizontal = 2
pivot_offset = Vector2(65, 25)
text = "Light width  up"
label_settings = ExtResource("2_wx6d4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Icon" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6gfsj")
expand_mode = 1

[node name="Description" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 136.0
offset_right = 65.0
offset_bottom = 186.0
grow_horizontal = 2
pivot_offset = Vector2(65, 25)
text = "Increase light width"
label_settings = ExtResource("4_jpf3m")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
